[package]
name = "pii_tokenization_policy"
version = "1.0.0"
rust-version = "1.88.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.anypoint]
group_id = "f684513f-280e-403a-ac53-80ca62e3de49"
definition_asset_id = "pii-tokenization-policy"
implementation_asset_id = "pii-tokenization-policy-wasm"

[dependencies]
pdk = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
thiserror = "1"
sha2 = "0.10"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
aho-corasick = { version = "1", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
pdk-unit = "1.8.0"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
panic = "abort"
